# ACQC

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug-docs.yml  config.yml  qa-evidence.yml  security.yml  ssot-request.yml
.github/workflows/: ci.yml  pages.yml
docs/: RELEASE_NOTES.md  index.md
docs/00_Deliverables/: 09_BusinessCase_ROI.xlsx  09_BusinessCase_ROI_mejorado.xlsx  README.md
docs/01_Architecture/: ARCHITECTURE_PORTAL.md  index.md
docs/02_Operations/: DEMO_STORY.md  index.md
docs/03_Governance/: GOVERNANCE.md  index.md
docs/04_Security/: SECURITY.md  index.md
docs/05_BusinessCase/: README.md
docs/javascripts/: mermaid-init.js
runbooks/: INCIDENT_RESPONSE.md
schemas/: lab_result.schema.json  tag_timeseries.schema.json
scripts/: run_demo.ps1
src/: README.md  pyproject.toml
src/acqc_demo/: __init__.py  __main__.py  data_gen.py  infer.py  trace.py
src/output/: predictions.json
src/output/audit/: audit_log.json
src/output/data/: dataset.json
src/tests/: __init__.py  test_demo.py
ssot/: kpi_acceptance.csv  quality_variables.csv  requirements_matrix.csv  risk_register.csv  tag_dictionary_template.csv
